--- a/spring.azure.appconfiguration/src/main/resources/bootstrap.properties
+++ b/spring.azure.appconfiguration/src/main/resources/bootstrap.properties
@@ -4,7 +4,7 @@ spring.cloud.azure.appconfiguration.enabled=true
 #
 # Connection string to azure app configuration resource
 #
-spring.cloud.azure.appconfiguration.stores[0].connection-string=Endpoint=https://myofficeconfiguration.azconfig.io;Id=zUcT-l9-s0:PFYfW7WM0/Pz7WZOnH3v;Secret=JTB9myJqGekDAJ5m8Z1vjmkJZrPd88JbOEE3EqoqJYs=
+spring.cloud.azure.appconfiguration.stores[0].connection-string=<connectionString> 
 #
 #
 # Configured filters for settings in the previous defined store
